--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
  
     <!-- logo -->
     <a (click)="goToHome()" class="menu-logo">
-      <img src="../../assets/images/car logo.png" alt="My Awesome Website"/>
+      <img src="../../assets/images/carLogo.png" alt="My Awesome Website"/>
  
  
 
