--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -337,7 +337,7 @@
     cursor: pointer;
   }
  
-  footer {
+  /* footer {
     display: flex;
   }
  
@@ -508,4 +508,131 @@
       width: 90%;
       padding: 20px;
     }
+  } */
+
+
+  footer {
+    font-family: Arial, sans-serif;
   }
+  
+  .text-uppercase {
+    text-transform: uppercase;
+  }
+  
+  .mb-4 {
+    margin-bottom: 1.5rem;
+  }
+  
+  .lh-5 {
+    line-height: 1.5;
+  }
+  
+  .bg-light {
+    background-color: #f8f9fa;
+  }
+  
+  .bg-secondary {
+    background-color: #6c757d;
+  }
+  
+  .text-muted {
+    color: #000407;
+  }
+  
+  .text-white {
+    color: #fff;
+  }
+  
+  .text-center {
+    text-align: center;
+  }
+  
+  .text-lg-start {
+    text-align: left;
+  }
+  
+  .mt-5 {
+    margin-top: 3rem;
+  }
+  
+  .p-4 {
+    padding: 1.5rem;
+  }
+  
+  .border-bottom {
+    border-bottom: 1px solid #dee2e6;
+  }
+  
+  .container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+  
+  .col-md-3, .col-md-4, .col-md-2, .col-lg-2, .col-xl-2, .col-lg-3, .col-xl-3 {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  
+  .col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  
+  .col-md-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  
+  .col-md-2, .col-lg-2, .col-xl-2 {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+  }
+  
+  .col-lg-3, .col-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  
+  .col-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  
+  .mx-auto {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  .mb-2 {
+    margin-bottom: 0.5rem;
+  }
+  
+  .me-2, .me-3 {
+    margin-right: 0.5rem;
+  }
+  
+  .me-3 {
+    margin-right: 1rem;
+  }
+  
+  .text-white {
+    color: #fff !important;
+  }
+  
+  .bg-dark {
+    background-color: #343a40 !important;
+  }
+  
