--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,42 +1,37 @@
-<!-- 
-<div class="car_container">
-  <div class="container">
-     <form action="/search" method="GET">
-        <input type="text" class="search-input" name="q" placeholder="Search for brand ">
-         <button type="submit" class="search-button">Search</button>
-      </form>
-  </div>
-    <div *ngFor="let car of availableCars" class="car-item" >
-    
-      <img [src]="car.imageUrl" alt="{{ car.brand }} {{ car.model }}" />
-      <div class="car-details">
-        <div><strong>{{ car.brand }} {{ car.model }}</strong></div>
-        <div>Year: {{ car.year }}</div>
-        <div>Price per day: ${{ car.pricePerDay }}</div>
-       
-      </div>
-      <button *ngIf="!car.isBooked" (click)="bookCar(car)" class="btn-1">Book Now</button>
-      
-      </div>
-</div> -->
+
 
 <div class="car_container">
+
   <div class="container">
-     <form (submit)="searchCars($event)" method="GET">
-        <input type="text" class="search-input" name="q" [(ngModel)]="searchQuery" placeholder="Search for brand">
-         <button type="submit" class="search-button">Search</button>
+      <!-- Sorting dropdown -->
+      <div class="sort-dropdown">
+           <select [(ngModel)]="sortBy" (change)="sortCars()">
+              <option value="">Sort by</option>
+              <option value="priceLowToHigh">Price: Low to High</option>
+              <option value="priceHighToLow">Price: High to Low</option>
+  <!-- Add more sorting options if needed -->
+        </select>
+      </div>  
+
+      <form (submit)="searchCars($event)" method="GET">
+        <input type="text"  class="search-input" name="q" [(ngModel)]="searchQuery" placeholder="Search for brand">
+         <button type="submit" style='background-color: black;' class="search-button"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256">
+          <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M21,3c-9.37891,0 -17,7.62109 -17,17c0,9.37891 7.62109,17 17,17c3.71094,0 7.14063,-1.19531 9.9375,-3.21875l13.15625,13.125l2.8125,-2.8125l-13,-13.03125c2.55469,-2.97656 4.09375,-6.83984 4.09375,-11.0625c0,-9.37891 -7.62109,-17 -17,-17zM21,5c8.29688,0 15,6.70313 15,15c0,8.29688 -6.70312,15 -15,15c-8.29687,0 -15,-6.70312 -15,-15c0,-8.29687 6.70313,-15 15,-15z"></path></g></g>
+          </svg></button>
+          
       </form>
+      <!-- <button (click)="toggleFilter()">Filter by Price</button> -->
   </div>
     <div *ngFor="let car of filteredCars" class="car-item">
     
-      <img [src]="car.imageUrl" alt="{{ car.brand }} {{ car.model }}" />
+      <img [src]="car.imageUrl" alt="{{ car.brand }} {{ car.model }}" style="height: 228px;"/>
       <div class="car-details">
-        <div><strong>{{ car.brand }} {{ car.model }}</strong></div>
-        <div>Year: {{ car.year }}</div>
-        <div>Price per day: ${{ car.pricePerDay }}</div>
-      </div>
+        <div class="car-alignment">
+          <h4>{{ car.brand }} {{ car.model }}</h4>
+        </div>
+        <p>Year: {{ car.year }}</p>
+        <p>Price: ₹{{ car.pricePerDay }}/day</p>
+      <button (click)="viewDescription(car)" class="btn-1">Description</button>
       <button *ngIf="!car.isBooked" (click)="bookCar(car)" class="btn-1">Book Now</button>
-      
     </div>
 </div>
-
