--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,4 @@
 .slider {
-    /* background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=8"); */
     background-image: url("../../assets/images/carroadspeed.jpg");
     background-size: cover;
   background-position: center;
@@ -45,6 +44,17 @@
     color: white;
     z-index: 1;
   }
+
+  .sliderTitle1 {
+    position: absolute;
+    top: 50%;
+    left: 7%;
+    font-size: 60px;
+    font-weight: 900;
+    text-align: center;
+    color: white;
+    z-index: 1;
+  }
  
   .sliderPrice {
     position: absolute;
@@ -60,6 +70,7 @@
  
   .buyButton {
     position: absolute;
+    margin-top:10px;
     top: 50%;
     right: 10%;
     font-size: 30px;
@@ -74,6 +85,7 @@
   .buyButton:hover {
     background-color: white;
     color: black;
+    
   }
  
   .sliderItem:nth-child(1) .sliderBg {
@@ -146,90 +158,6 @@
     clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
   }
  
-  /* .payment {
-    width: 500px;
-    height: 500px;
-    background-color: white;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    padding: 10px 50px;
-    display: none;
-    flex-direction: column;
-    -webkit-box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
-  }
- 
-  .payTitle {
-    font-size: 20px;
-    color: lightgray;
-  }
- 
-  label {
-    font-size: 14px;
-    font-weight: 300;
-  }
- 
-  .payInput {
-    padding: 10px;
-    margin: 10px 0px;
-    border: none;
-    border-bottom: 1px solid gray;
-  }
- 
-  .payInput::placeholder {
-    color: rgb(163, 163, 163);
-  }
- 
-  .cardIcons {
-    display: flex;
-  }
- 
-  .cardIcon {
-    margin-right: 10px;
-  }
- 
-  .cardInfo {
-    display: flex;
-    justify-content: space-between;
-  }
- 
-  .sm {
-    width: 30%;
-  }
- 
-  .payButton {
-    position: absolute;
-    height: 40px;
-    bottom: -40;
-    width: 100%;
-    left: 0;
-    -webkit-box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
-    background-color: #369e62;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
- 
-  .close {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    background-color: gray;
-    color: white;
-    top: 10px;
-    right: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    padding: 2px;
-  } */
- 
   .productImg {
     width: 50%;
   }
@@ -243,7 +171,7 @@
   }
  
   .productTitle {
-    font-size: 75px;
+    font-size: 45px;
     font-weight: 900;
   }
  
@@ -309,9 +237,11 @@
  
   .newSeason {
     display: flex;
+    margin: -30px;
   }
  
   .nsItem {
+    
     flex: 1;
     background-color: black;
     color: white;
@@ -337,178 +267,6 @@
     cursor: pointer;
   }
  
-  /* footer {
-    display: flex;
-  }
- 
-  .footerLeft {
-    flex: 2;
-    display: flex;
-    justify-content: space-between;
-    padding: 50px;
-  }
- 
-  .fMenuTitle {
-    font-size: 16px;
-  }
- 
-  .fList {
-    padding: 0;
-    list-style: none;
-  }
- 
-  .fListItem {
-    margin-bottom: 10px;
-    color: gray;
-    cursor: pointer;
-  }
- 
-  .footerRight {
-    flex: 1;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
- 
-  .fInput {
-    padding: 5px;
-  }
- 
-  .fButton {
-    padding: 5px;
-    background-color: black;
-    color: white;
-  }
- 
-  .fIcons{
-    display: flex;
-  }
- 
-  .fIcon{
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-  }
- 
-  .copyright{
-    font-weight: 300;
-    font-size: 14px;
-  }
- 
-  @media screen and (max-width:480px) {
-    nav{
-      padding: 20px;
-    }
- 
-    .search{
-      display: none;
-    }
- 
-    .navBottom{
-      flex-wrap: wrap;
-    }
- 
-    .menuItem{
-      margin: 20px;
-      font-weight: 700;
-      font-size: 20px;
-    }
- 
-    .slider{
-      clip-path: none;
-    }
- 
-    .sliderImg{
-      width: 90%;
-    }
- 
-    .sliderBg{
-      width: 100%;
-      height: 100%;
-    }
- 
-    .sliderTitle{
-      display: none;
-    }
- 
-    .sliderPrice{
-      top: unset;
-      bottom: -50;
-      left: 0;
-      background-color: lightgrey;
-    }
- 
-    .buyButton{
-      right: 0;
-      top: 0;
-    }
- 
-    .features{
-      flex-direction: column;
-    }
- 
-    .product{
-      clip-path: none ;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
- 
-    .productImg{
-      width: 80%;
-    }
- 
-    .productDetails{
-      width: 100%;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      position: relative;
-      top: 0;
-    }
- 
-    .productTitle{
-      font-size: 50px;
-      margin: 0;
-    }
- 
-    .gallery{
-      display: none;
-    }
- 
-    .newSeason{
-      flex-direction: column;
-    }
- 
-    .nsItem:nth-child(2){
-      padding: 50px;
-    }
- 
-    footer{
-      flex-direction: column;
-      align-items: center;
-    }
- 
-    .footerLeft{
-      padding: 20px;
-      width: 90%;
-    }
- 
-    .footerRight{
-      padding: 20px;
-      width: 90%;
-      align-items: center;
-      background-color: whitesmoke;
-    }
- 
-    .payment{
-      width: 90%;
-      padding: 20px;
-    }
-  } */
 
 
   footer {
@@ -635,4 +393,14 @@
   .bg-dark {
     background-color: #343a40 !important;
   }
-  
+
+.featureTitle{
+  cursor: pointer;
+}
+
+
+  a{
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+  }
