--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,51 +1,50 @@
 
 
-.outer{
+.outer {
     height: 100vh;
     margin-top: -50px;
-    /* background: linear-gradient(to top,#c9c9ff 50%, #6e6ef6 90%) no-repeat; */
-     background: url('../../assets/images/carroadspeed.jpg');
-     background-size: cover;
-     position: relative;
+    background: url('../../assets/images/carroadspeed.jpg');
+    background-size: cover;
+    position: relative;
 }
- 
-.panel-heading{
+
+.panel-heading {
     text-align: center;
     margin-bottom: 10px;
 }
- 
-#forget{
+
+#forget {
     min-width: 100px;
     margin-left: auto;
     text-decoration: none;
     cursor: pointer;
 }
-a:hover{
+
+a:hover {
     text-decoration: none;
 }
- 
-.form-inline label{
+
+.form-inline label {
     padding-left: 10px;
     margin: 0;
     cursor: pointer;
 }
- 
-.btn{
+
+.btn {
     margin-top: 20px;
     border-radius: 15px;
 }
- 
-.panel{
+
+.panel {
     min-height: 380px;
     box-shadow: 20px 20px 80px rgb(18, 9, 46);
     border-radius: 12px;
     margin-top: 100px;
     position: relative;
     background-color: rgba(30, 12, 46, 0.5);
-    
 }
- 
-.input-field{
+
+.input-field {
     border-radius: 5px;
     padding: 5px;
     display: flex;
@@ -54,30 +53,35 @@ a:hover{
     border: 1px solid #ddd;
     color: #4343ff;
 }
- 
-.input-field.error{
-    border: 1px solid red;
-    color: red;
-}
- 
-input[type='text'],
-input[type='password']{
-    border:none;
-    outline: none;
-    box-shadow: none;
-    width: 100%;
-}
- 
-.fa-eye-slash.btn{
+.emailInput{
     border: none;
     outline: none;
     box-shadow: none;
 }
- 
+
+.input-field.error {
+   
+    color: red;
+}
+
+input[type='text'],
+input[type='password'] {
+    border: none;
+    outline: none;
+    box-shadow: none;
+    width: 100%;
+}
+
+.fa-eye-slash.btn {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
 img {
-    width:40px;
+    width: 40px;
     height: 40px;
-    object-fit:cover;
+    object-fit: cover;
     border-radius: 50%;
-    position:relative;
+    position: relative;
 }
