--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,56 +1,47 @@
 
-
-
 <div class="outer">
-  <div class="container">
-      <div class="row">
-         <div class="offset-md-2 col-lg-5 col-md-7 offset-lg-4 offset-md-3">
-<div class="panel border bg-white">
-  <div class="panel-heading">
-      <h3 class="pt-3 font-weight-bold">Login</h3>
-  </div>
-  <div class="panel-body p-3">
-     <form [formGroup] ="loginForm">
-      <div class="form-group pt-3">
-          <div class="input-field" [class.error]="loginForm.controls['username'].dirty && loginForm.hasError('required','username')">
-              <span class=" p-2">
-                  <!-- <fa-icon [icon]="user"></fa-icon> -->
-              </span>
-              <input formControlName="username" type="text" placeholder="Username">
-          </div>
+    <div class="container">
+        <div class="row">
+            <div class="offset-md-2 col-lg-5 col-md-7 offset-lg-4 offset-md-3">
+   <div class="panel border bg-white">
+     <div class="panel-heading">
+         <h3 class="pt-3 font-weight-bold">Login</h3>
+     </div>
+     <div class="panel-body p-3">
+<form [formGroup]="loginForm">
+    <div class="form-group pt-3">
+      <div class="input-field" [class.error]="loginForm.get('username').invalid && loginForm.get('username').touched">
+        <input formControlName="username" type="text" placeholder="Username">
       </div>
-      <small *ngIf="loginForm.controls['username'].dirty && loginForm.hasError('required','username')" class="text-danger">*Username is required</small>
-
-      <!-- email -->
-      <div class="form-group pt-3">
-        <div class="input-field" [class.error]="loginForm.controls['email'].dirty && loginForm.hasError('required','email')">
-            <span class=" p-2">
-                <!-- <fa-icon [icon]="user"></fa-icon> -->
-            </span>
-            <input formControlName="email" type="text" placeholder="Email">
-        </div>
+      <small *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched" class="text-danger">*Username is required</small>
     </div>
-    <small *ngIf="loginForm.controls['email'].dirty && loginForm.hasError('required','email')" class="text-danger">*Email is required</small>
-      <div class="form-group pt-3">
-          <div class="input-field" [class.error]="loginForm.controls['password'].dirty && loginForm.hasError('required','password')" >
-              <span class=" p-2"></span>
-              <!-- <fa-icon [icon]="lock"></fa-icon> -->
-              <!-- <input type="text" placeholder="Password"> -->
-              <input  formControlName="password" [type]="type" placeholder="Password">
-              <span (click)="hideshowPass()"></span>
+  
+    <div class="form-group pt-3">
+      <div class="input-field " [class.error]="loginForm.get('email').invalid && loginForm.get('email').touched">
+        <input formControlName="email" type="email" placeholder="Email" class="emailInput">
+      </div>
+      <small *ngIf="loginForm.get('email').invalid && loginForm.get('email').touched" class="text-danger">*Invalid email address</small>
+      
+    </div>
+  
+    <div class="form-group pt-3">
+      <div class="input-field" [class.error]="loginForm.get('password').invalid && loginForm.get('password').touched">
+        <input formControlName="password" [type]="type" placeholder="Password">
+        <span (click)="hideshowPass()"></span>
+      </div>
+      <small *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched" class="text-danger">*Password is required</small>
+     
+    </div>
+  
+    <button (click)="onlogin()" type="submit" class="btn btn-primary btn-block mt-4 w-100">Login</button>
+    <div class="text-center pt-4 text-muted">Don't have an account? <a id="forget" routerLink="/signup">Signup</a></div>
+  </form>
+</div>
+</div>
 
-          </div>
-      </div>
-      <small *ngIf="loginForm.controls['password'].dirty && loginForm.hasError('required','password')" class="text-danger">*Password is required</small>
-      <div class="form-inline fr mt-4">
-          <a id="forget" class="font-weight-bold" >Forget Password?</a>
-      </div>
-      <button (click)="onlogin()" type="submit" class="btn btn-primary btn-block mt-4 w-100">Login</button>
-        <div class="text-center pt-4 text-muted">Don't have account? <a id="forget" routerLink="/signup">Signup</a></div>
-     </form>
-  </div>
+
 </div>
-         </div>
-      </div>
-  </div>
 </div>
+</div>
+</div> 
+  
