--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,11 +26,7 @@
             Car
           </a>
         </li>
-        <!-- <li>
-          <a (click)=" goToWishlist()">
-            Wishlist 
-          </a>
-        </li> -->
+       
         <li>
           <a (click)=" goToAbout()">
             About
@@ -40,22 +36,30 @@
       
       <ul>
         
-        <li>
-          <!-- Show this link when user is not logged in -->
+        <li *ngIf="!status">
+ 
         
           <a (click)="goToSignup()">
             Sign-up
           </a>
         </li>
          
-         <li>
+         <li *ngIf="!status">
 
            <a class="nav-link" (click)="goToLogin()">Login</a>
          </li>
+  
+         <li *ngIf="status">
+        
+           <span>Welcome, {{ userName }}</span>
+          <a class="nav-link" (click)="logout()">Logout</a>
+        </li>
+        
 
-
+       
          
       </ul>
+      <span *ngIf="userName">welcom, {{ userName}}</span>
     </div>
   </nav>
   <router-outlet></router-outlet>
