--- a/src/app/payment/payment.component.css
+++ b/src/app/payment/payment.component.css
@@ -8,7 +8,7 @@
   }
 
   .main{
-    background: url("../../assets/images/beach.webp");
+    background: url("../../assets/images/carroadspeed.jpg");
     background-size: cover;
     margin-top: -20px;
   }
